--- a/8_NODE_E_MYSQL/package.json
+++ b/8_NODE_E_MYSQL/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "1_instalacao_mysql",
+  "name": "8_node_e_mysql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js localhost 3000"    
+    "start": "nodemon ./index.js localhost 3000"
   },
   "keywords": [],
   "author": "",
